--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el primer parrafo</p>
+
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el primer parrafo de inicio donde vamos a explicar las cosas increibles</p>  
+        </div>
+    </div>
+
 </body>
 </html>
