--- a/blogspot.html
+++ b/blogspot.html
@@ -20,7 +20,7 @@
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
-            <p>Hago un cambio a la cabecera despues del merge, haré otro merge a partir de ahora</p>
+            <p>Este es el tercer merge, vamos a ver</p>
         </div>
     </div>
 </body>
