--- a/blogspot.html
+++ b/blogspot.html
@@ -21,6 +21,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
             <p>Este es el tercer merge, vamos a ver</p>
+            <p>Agregando una última cosa para enviarla nuevamente a GITHUB</p>
         </div>
     </div>
 </body>
