una version de el hyperblog con SSH

--- a/blogspot.html
+++ b/blogspot.html
@@ -22,6 +22,7 @@
             <p>Suscribete y dale like</p>
             <p>Este es el tercer merge, vamos a ver</p>
             <p>Agregando una última cosa para enviarla nuevamente a GITHUB</p>
+            <p>Usando SSH par hacer un commit nuevo</p>
         </div>
     </div>
 </body>
