--- a/blogspot.html
+++ b/blogspot.html
@@ -22,6 +22,10 @@
             <p>Suscribete y dale like</p>
             <p>Este es el tercer merge, vamos a ver</p>
         </div>
+        <div id="footer">
+            Hecho con amor en Platzi &lt;3
+        </div>
     </div>
+    
 </body>
 </html>
