--- a/blogspot.html
+++ b/blogspot.html
@@ -18,9 +18,9 @@
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-            <p>Suscribete y dale like</p>
+            <p>Suscríbete y dale like</p>
             <p>Este es el tercer merge, vamos a ver</p>
             <p>Agregando una última cosa para enviarla nuevamente a GITHUB</p>
             <p>Usando SSH par hacer un commit nuevo</p>
