agregué una imagen al blog

--- a/blogspot.html
+++ b/blogspot.html
@@ -21,6 +21,7 @@
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscríbete y dale like</p>
+            <p><img src="img/IMG_16414.jpg" alt="foto mia" width="100%"></p>
             <p>Este es el tercer merge, vamos a ver</p>
             <p>Agregando una última cosa para enviarla nuevamente a GITHUB</p>
             <p>Usando SSH par hacer un commit nuevo</p>
