este es una prueba que hice con stash

--- a/blogspot.html
+++ b/blogspot.html
@@ -26,6 +26,7 @@
             <p>Agregando una última cosa para enviarla nuevamente a GITHUB</p>
             <p>Usando SSH par hacer un commit nuevo</p>
             <h1>Estoy haciendo un nuevo titulo para verificar un nuevo push</h1>
+            <h2>estoy haciendo u cambio con stash</h2>
         </div>
         <div id="footer">
             Hecho con amor en Platzi &lt;3
